# MusicStreamer

./: .gitignore  CLAUDE.md  Makefile  RELEASE-NOTES.md  io.github.kcreasey.MusicStreamer.yaml  main.py  org.example.MusicStreamer.desktop  org.example.Streamer.desktop  pyproject.toml  python3-modules.yaml  stations.json  yt-cookies.txt
.claude/: settings.json
.claude/hooks/: bump-rollback-hook.sh  bump-version-hook.sh
.github/workflows/: linux-appimage.yml  linux-flatpak.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.3-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md  v2.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: 95-residual-exhausted-toast-already-ended-path.md  95-spurious-stream-exhausted-toast.md  edit-dialog-fetch-crash.md  phase-72-hover-peek-wayland.md  settings-import-silent-fail-on-readonly-db.md  twitch-avatar-fails-on-new-add.md  youtube-no-audio.md  yt-live-drops-buffer-underrun.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-MILESTONE-AUDIT.md  v1.5-REQUIREMENTS.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md
.planning/notes/: 2026-03-18-yt-streams-capture-title.md  2026-03-20-icy-override-per-station.md  2026-03-20-yt-thumbnail-station-image.md  2026-03-21-now-playing-show-provider.md  2026-03-21-sdr-live-radio-support.md  2026-03-21-sync-config-between-computers.md  2026-03-22-favorite-songs-from-icy.md  2026-03-22-yt-thumbnail-aspect-ratio.md  2026-04-03-station-art-fetching-beyond-youtube.md  2026-04-10-mpv-vs-vlc-work-laptop-constraint.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-stop-button-right-align.md  SEED-002-custom-highlight-color.md  (+7 more)
musicstreamer/: __main__.py  __version__.py  _popen.py  aa_import.py  aa_live.py  accent_utils.py  assets.py  brand_avatars.py  buffer_log.py  constants.py  cookie_utils.py  cover_art.py  cover_art_mb.py  desktop_install.py  eq_profile.py  filter_utils.py  flatpak_first_launch.py  gbs_api.py  gbs_marquee.py  gst_bus_bridge.py  hi_res.py  migration.py  models.py  mpris.py  oauth_helper.py  oauth_log.py  paths.py  player.py  playlist_parser.py  preroll_log.py  repo.py  runtime_check.py  settings_export.py  single_instance.py  soma_import.py  stream_ordering.py  subprocess_utils.py  theme.py  twitch_helix.py  url_helpers.py  (+2 more)
scripts/: dev-launch.sh  gbs_capture_fixtures.sh  install.sh
tests/: __init__.py  _fake_player.py  conftest.py  test_aa_import.py  test_aa_live.py  test_aa_siblings.py  test_aa_url_detection.py  test_accent_color_dialog.py  test_accent_provider.py  test_accounts_dialog.py  test_activation_token_strip.py  test_add_sibling_dialog.py  test_announcement_banner.py  test_art_cache.py  test_art_paths.py  test_assets_avatar.py  test_aumid_string_parity.py  test_brand_avatars.py  test_buffer_events_log.py  test_bump_version.py  test_constants_drift.py  test_cookie_import_dialog.py  test_cookies.py  test_cover_art.py  test_cover_art_avatar.py  test_cover_art_mb.py  test_cover_art_routing.py  test_db_connect_is_sole_connection_factory.py  test_db_fk_invariants.py  test_desktop_install.py  test_discovery_dialog.py  test_edit_station_dialog.py  test_edit_station_dialog_avatar.py  test_eq_profile.py  test_equalizer_dialog.py  test_fake_player_no_inline.py  test_fake_player_signal_parity.py  test_favorites.py  test_filter_utils.py  test_flatpak_first_launch.py  (+103 more)
todos/: 2026-05-25-gbs-theme-hash-baseline-grow.md
tools/: bump_version.py  check_bundle_plugins.py  check_spec_entry.py  check_subprocess_guard.py  update_yt_dlp.py
(+2095 files in other folders)
