[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musicstreamer"
version = "1.1.0"
description = "GNOME internet radio stream player"
requires-python = ">=3.10"
dependencies = [
    # PyGObject (GTK4/Adw/GStreamer) is a system package — installed via apt
    # python3-gi, gir1.2-gtk-4.0, gir1.2-adw-1, gir1.2-gst-1.0
    "PySide6>=6.11",
    "yt-dlp",
    "streamlink>=8.3",
    "platformdirs>=4.3",
]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-qt>=4",
]

[project.scripts]
musicstreamer = "musicstreamer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["musicstreamer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
