[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musicstreamer"
version = "2.0.0"
description = "GNOME internet radio stream player"
requires-python = ">=3.10"
dependencies = [
    # PyGObject (GTK4/Adw/GStreamer) is a system package — installed via apt
    # python3-gi, gir1.2-gtk-4.0, gir1.2-adw-1, gir1.2-gst-1.0
    "PySide6>=6.11",
    "yt-dlp",
    "streamlink>=8.3",
    "platformdirs>=4.3",
]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-qt>=4",
]
# WR-02 (43.1 review): pin pywinrt deps to >=3.2,<4. pywinrt 3.x has had
# breaking namespace reshuffles between minor versions (2.x -> 3.x moved
# winrt.windows.* layout). Phase 43.1 UAT validated the 3.2.x layout
# (see smtc.py lines 18-24); codify it here so a future pywinrt release
# cannot silently break the SMTC backend with a confusing ImportError.
windows = [
    "winrt-Windows.Media.Playback>=3.2,<4",
    "winrt-Windows.Media>=3.2,<4",
    "winrt-Windows.Storage.Streams>=3.2,<4",
    "winrt-Windows.Foundation>=3.2,<4",
]

[project.scripts]
musicstreamer = "musicstreamer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["musicstreamer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live services (e.g. D-Bus + playerctl)",
]
