[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musicstreamer"
version = "2.1.59"
description = "GNOME internet radio stream player"
requires-python = ">=3.10"
dependencies = [
    # PyGObject (GTK4/Adw/GStreamer) is a system package — installed via apt
    # python3-gi, gir1.2-gtk-4.0, gir1.2-adw-1, gir1.2-gst-1.0
    "PySide6>=6.11",
    "yt-dlp",
    "streamlink>=8.3",
    "platformdirs>=4.3",
    # Phase 44 UAT: requests needs a char-detection backend. charset_normalizer
    # 3.4.x ships mypyc-compiled .pyd modules whose hash-prefixed shared helper
    # PyInstaller's hooks-contrib does not collect, leaving the package
    # unimportable in the Windows bundle. chardet 5.x is pure-Python and works
    # everywhere; requests prefers it over charset_normalizer when both exist.
    # Pin <6 because requests rejects chardet >= 6.0.0 (compat assertion).
    "chardet>=5.2,<6",
]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-qt>=4",
]
# WR-02 (43.1 review): pin pywinrt deps to >=3.2,<4. pywinrt 3.x has had
# breaking namespace reshuffles between minor versions (2.x -> 3.x moved
# winrt.windows.* layout). Phase 43.1 UAT validated the 3.2.x layout
# (see smtc.py lines 18-24); codify it here so a future pywinrt release
# cannot silently break the SMTC backend with a confusing ImportError.
windows = [
    "winrt-Windows.Media.Playback>=3.2,<4",
    "winrt-Windows.Media>=3.2,<4",
    "winrt-Windows.Storage.Streams>=3.2,<4",
    "winrt-Windows.Foundation>=3.2,<4",
]

[project.scripts]
musicstreamer = "musicstreamer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["musicstreamer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live services (e.g. D-Bus + playerctl)",
]
